# keito-cli

./: .gitignore  AGENTS.md  CHANGELOG.md  Cargo.toml  README.md  dist-workspace.toml  setup
.github/scripts/: check-release-version.py
.github/workflows/: release-tagger.yml  release-version-guard.yml  release.yml  test.yml
docs/: agent-guide.md  ai-native-services-positioning.md  keito-cli-prd.md  production-readiness-plan.md  production-task-plan.md
scripts/: record-demo.sh
skills/keito-time-track/: SKILL.md
skills/keito-time-track/agents/: openai.yaml
skills/keito-time-track/assets/: claude.md-block.md  config.example.yml
skills/keito-time-track/hooks/: session-end.sh  session-start.sh
skills/keito-time-track/hooks/lib/: config.sh  duration.sh  log.sh
skills/keito-time-track/installers/: install-claude-code.sh  install-codex.sh
skills/keito-time-track/scripts/: disable.sh  install-cli.sh  pause-resume.sh  setup-wizard.sh  status.sh
src/: error.rs  lib.rs  main.rs  types.rs
src/api/: client.rs  error.rs  mod.rs  models.rs
src/cli/: auth.rs  clients.rs  mod.rs  projects.rs  skill.rs  time.rs
src/commands/: auth.rs  clients.rs  mod.rs  projects.rs  skill.rs  time.rs
src/config/: auth.rs  file.rs  mod.rs
src/output/: json.rs  mod.rs  table.rs
tapes/: time-start-stop.tape
tests/: api_mock.rs  cli_integration.rs  man_pages.rs  skill_hooks.rs  skill_hooks.sh
tests/fixtures/api_v2/: clients_list.json  error_400.json  error_401.json  error_404.json  error_409.json  error_429.json  projects_list.json  tasks_list.json  time_entries_list.json  time_entry_create.json  time_entry_running.json  time_entry_stopped.json  users_me.json
