[package]
name = "keito-cli"
version = "0.1.7"
edition = "2021"
description = "AI agent time tracking CLI for Keito: capture billable human and agent work for client billing, agency projects, and AI-native services"
license = "MIT"
repository = "https://github.com/osodevops/keito-cli"
keywords = ["keito", "time-tracking", "cli", "ai-agents", "billing"]
categories = ["command-line-utilities"]
homepage = "https://keito.ai"
documentation = "https://keito.ai/docs/cli"

[lib]
name = "keito_cli"
path = "src/lib.rs"

[[bin]]
name = "keito"
path = "src/main.rs"

[[bin]]
name = "gen-man"
path = "src/bin/gen-man.rs"

[dependencies]
clap = { version = "4", features = ["derive", "env", "string"] }
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "1.1"
tabled = "0.20"
chrono = { version = "0.4", features = ["serde"] }
dirs = "6"
thiserror = "2"
colored = "3"
dialoguer = "0.12"
clap_mangen = "0.3"

[dev-dependencies]
assert_cmd = "2"
predicates = "3"
wiremock = "0.6"
tempfile = "3"

[profile.release]
strip = true
lto = true
codegen-units = 1
